<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    android:background="#fafafa"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sprinjinc.bestfriend.PersonalAccountActivity"
    tools:showIn="@layout/app_bar_personal_account">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/your_profile_logo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="11"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <EditText
                android:id="@+id/editText_accountUsername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:inputType="textPersonName"
                android:hint="@string/username_editText"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="11"
        android:orientation="horizontal" >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <EditText
                android:id="@+id/editText_accountEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:inputType="textEmailAddress"
                android:hint="@string/email_editText"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="11"
        android:orientation="horizontal" >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_birthday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <EditText
                android:id="@+id/editText_accountBirthday"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:inputType="date"
                android:hint="@string/date_of_birth_editText"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="11"
        android:orientation="horizontal" >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_contact_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <EditText
                android:id="@+id/editText_accountContactNo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:inputType="phone"
                android:hint="@string/contact_no_editText"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="11"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_textView"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp" />

        <RadioGroup
            android:id="@+id/radioGroup_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_weight="99" >

            <RadioButton
                android:id="@+id/radioButton_male"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/male_radioButton" />

            <RadioButton
                android:id="@+id/radioButton_female"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:text="@string/female_radioButton" />

            <RadioButton
                android:id="@+id/radioButton_other"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:text="@string/other_radioButton" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="11"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marital_status_textView"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp" />

        <RadioGroup
            android:id="@+id/radioGroup_maritalStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_weight="99" >

            <RadioButton
                android:id="@+id/radioButton_married"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:text="@string/married_radioButton" />

            <RadioButton
                android:id="@+id/radioButton_unmarried"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:text="@string/unmarried_radioButton" />

            <RadioButton
                android:id="@+id/radioButton_divorced"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:text="@string/divorced_radioButton" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="11"
        android:orientation="horizontal"
        android:weightSum="100" >

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10" />

        <ImageButton
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/cancel_green_button"
            android:scaleType="fitCenter"
            android:background="@null"
            android:layout_weight="35"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10" />

        <ImageButton
            android:id="@+id/button_save"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/save_green_button"
            android:scaleType="fitCenter"
            android:background="@null"
            android:layout_weight="35"/>

    </LinearLayout>

</LinearLayout>
