<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_up_background"
    android:orientation="vertical"
    tools:context="com.sprinjinc.bestfriend.SignUpActivity"
    android:weightSum="100">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="25"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/bestfriend_logo"
        tools:ignore="ContentDescription" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:weightSum="100">

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="13" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="74"
            android:textAlignment="center"
            android:gravity="center"
            android:theme="@style/MyEditTextStyle"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" >

            <EditText
                android:id="@+id/editText_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:gravity="center"
                android:theme="@style/MyEditTextStyle"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:inputType="textEmailAddress"
                android:hint="@string/email_hint" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:weightSum="100">

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="13" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="74"
            android:textAlignment="center"
            android:gravity="center"
            android:theme="@style/MyEditTextStyle"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" >

            <EditText
                android:id="@+id/editText_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="74"
                android:textAlignment="center"
                android:gravity="center"
                android:theme="@style/MyEditTextStyle"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:inputType="textPassword"
                android:hint="@string/password_hint" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" />

    <ImageButton
        android:id="@+id/imageButton_signUp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:scaleType="fitCenter"
        android:background="@null"
        android:src="@drawable/sign_up"
        android:contentDescription="@string/sign_up_content_description_2" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:src="@drawable/already_have_account_prompt"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:weightSum="100" >

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10" />

        <ImageButton
            android:id="@+id/imageButton_logIn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="80"
            android:scaleType="fitCenter"
            android:background="@null"
            android:src="@drawable/log_in_hollow"
            android:contentDescription="@string/log_in_button_content_description" />

    </LinearLayout>

</LinearLayout>
